<resources>
    <string name="app_name">Echowall_alpha</string>
    <string name="greeting">Hello</string>
    <string name="cover_title">Capture your memorable moments</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="quit">Quit</string>
    <string name="camera">Take photo</string>
    <string name="view">View photo</string>
    <string name="record">Record audio</string>
    <string name="play">Preview audio</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="app_folder">EchoAlpha/</string>
    <string name="audio_format">.3gp</string>
    <string name="image_format">.jpg</string>
    <string name="add_bubble">Add bubble</string>
    <string name="add_bubble_left">Left Bubble</string>
    <string name="add_bubble_right">Right Bubble</string>
    <string name="finish_bubble">Finish bubble</string>
    <string name="finish">Finish post</string>
    <string name="create_post">Create post</string>
    <string name="edit_post">Edit</string>
    <string name="create_postcard">Postcard</string>
    <string name="post_create_caption_hint">What\'s in your mind?</string>
</resources>
